gcc/testsuite/rust/rustc/ui/issues/issue-37887.rs
fn main() {
    extern crate libc; // { dg-error ".E0658." "" { target *-*-* } }
    use libc::*; // { dg-error ".E0432." "" { target *-*-* } }
}

